--- a/1. Angular 14/Day 1/Supporting Materials/05/products/product-list.component.html
+++ b/1. Angular 14/Day 1/Supporting Materials/05/products/product-list.component.html
@@ -1,6 +1,6 @@
 <div class='card'>
   <div class='card-header'>
-    {{pageTitle}}
+   Product List
   </div>
   <div class='card-body'>
     <div class='row'>
